--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -21,13 +21,22 @@ body { background-color:#5B0DB2;}
 h1 {color:#FFFE32;}
 h1{text-align:center;}
 
+h2 {color:#FFFE32;}
+h2{text-align:center;}
+
 p{color:#FFFE32;}
 p{text-align:center;}
 
+a:link{color:#0AB257;}
+a:visited{color:#028BFF;}
+a:hover{color:#FFFE32;}
+a:active{color:#10CC61;}
+/*O hover PRECISA ser depois do link e o active depois do HOVER*/
+
 p.header, p.footer { display: none; }
 div.logo { width: 204px; height: 38px; float: left; background: url(logo.png) 0 0 no-repeat; position: relative; z-index: 10; }
-div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0; float: right; color: #333; text-align: right; font-size: 18px; position: relative; z-index: 10; }
-.template-wrap { position: absolute; top: 150%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0; float: right; color: #FFFE32; text-align: right; font-size: 18px; position: relative; z-index: 10; }
+.template-wrap { position: absolute; top: 215%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 .template-wrap canvas { margin: 0 0 10px 0; position: relative; z-index: 9; box-shadow: 0 10px 30px rgba(0,0,0,0.2); -moz-box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
 .fullscreen { float: right; position: relative; z-index: 10; }
 
