--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -24,6 +24,9 @@ h1{text-align:center;}
 h2 {color:#FFFE32;}
 h2{text-align:center;}
 
+h3 {color:#FFFE32;}
+h3{text-align:center;}
+
 p{color:#FFFE32;}
 p{text-align:center;}
 
